--- a/PeopleOcclusion/Base.lproj/Main.storyboard
+++ b/PeopleOcclusion/Base.lproj/Main.storyboard
@@ -34,30 +34,26 @@
                             <view contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="397-db-LGx" customClass="ARCoachingOverlayView">
                                 <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                                <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="R6Z-1w-TFO">
-                                        <rect key="frame" x="364" y="841" width="42" height="21"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                        <color key="textColor" systemColor="systemPinkColor"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
-                                </subviews>
                                 <viewLayoutGuide key="safeArea" id="AGd-p6-wxI"/>
-                                <constraints>
-                                    <constraint firstItem="R6Z-1w-TFO" firstAttribute="bottom" secondItem="AGd-p6-wxI" secondAttribute="bottom" id="Gau-8l-FMi"/>
-                                    <constraint firstItem="AGd-p6-wxI" firstAttribute="trailing" secondItem="R6Z-1w-TFO" secondAttribute="trailing" constant="8" id="tS1-W1-Sqs"/>
-                                </constraints>
                                 <connections>
                                     <outlet property="delegate" destination="BYZ-38-t0r" id="Uln-tg-QFx"/>
                                     <outlet property="sessionProvider" destination="8bC-Xf-vdC" id="Ipu-Bi-YPr"/>
                                 </connections>
                             </view>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="R6Z-1w-TFO">
+                                <rect key="frame" x="352" y="841" width="42" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" systemColor="systemPinkColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <gestureRecognizers/>
                         <constraints>
                             <constraint firstItem="xzi-O7-mbA" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="6Zj-EZ-I3T"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="R6Z-1w-TFO" secondAttribute="trailing" constant="20" id="Bcz-qv-Zex"/>
+                            <constraint firstItem="R6Z-1w-TFO" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="dxE-JT-IBL"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="xzi-O7-mbA" secondAttribute="bottom" constant="35" id="zDs-Wt-206"/>
                         </constraints>
                         <connections>
